--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,10 +18,10 @@
 			{% if current_user.is_authenticated %}
 				<span class="welcome">Hello, {{ current_user.username }}!</span>
 				<a href="{{ url_for('auth.logout') }}">Logout</a>
-			{% else %}
-				<a href="{{ url_for('auth.login') }}">Login</a>
-				<a href="{{ url_for('auth.register') }}">Register</a>
-			{% endif %}
+            {% else %}
+                <a href="{{ url_for('auth.login') }}">Login</a>
+                <a href="{{ url_for('auth.request_access') }}">Request Access</a>
+            {% endif %}
 		</nav>
 		<div id="game-container"></div>
 	</main>
