--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -32,8 +32,9 @@
 			<label class="remember">
 				<input type="checkbox" name="remember" /> Remember me
 			</label>
-			<button type="submit">Login</button>
-			<p>Don't have an account? <a href="{{ url_for('auth.register') }}">Register</a></p>
+            <button type="submit">Login</button>
+            <p><a href="{{ url_for('auth.request_access') }}">Request Access</a></p>
+            <p>Registration is disabled. Ask the admin for access.</p>
 		</form>
 	</main>
 </body>
