Fix play/wash activities and shop issues

--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -265,10 +265,10 @@
 						<img src="{{ url_for('static', filename='img/shower_cabin.png') }}" alt="Take Shower">
 						<span>Take Shower (+60)</span>
 					</button>
-					<button class="wash-btn base-menu-btn" data-wash="bath">
-						<img src="{{ url_for('static', filename='img/bath.png') }}" alt="Take Bath">
-						<span>Take Bath (+80)</span>
-					</button>
+				<button class="wash-btn base-menu-btn" data-wash="bath">
+					<img src="{{ url_for('static', filename='img/bath.png') }}" alt="Take Bath">
+					<span>Take Bath (Full)</span>
+				</button>
 				</div>
 				<button id="cancel-wash" class="base-cancel-btn">Cancel</button>
 			</div>
